tests/typechecker/local-variable-outside-of-procedure-01.prog
proc main: () void
{
  i: i32 = 0;
  proc foo: () void
  {
    i;
  }
}
